# eth-mcp-server

./: .env  .gitignore  Cargo.toml  README.md
abis/: aggregatorv3_abi.json  erc20_abi.json
src/: balance.rs  config.rs  lib.rs  main.rs  price.rs  service.rs  swap.rs
tests/: balance_tests.rs  price_tests.rs  swap_tests.rs
