[package]
name = "eth-mcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
ethers = { version = "2", features = ["abigen", "rustls"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_decimal = "1"
anyhow = "1"
chrono = "0.4.42"
