[package]
name = "eth-mcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Ethereum SDK
ethers = { version = "2.0.14", features = ["abigen", "rustls"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment variables
dotenv = "0.15"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Decimal numbers
rust_decimal = "1.30"

# Error handling
anyhow = "1.0"

# Date/time
chrono = "0.4.42"

# MCP SDK
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = ["server", "client", "transport-child-process"] }
rmcp-macros = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main" }
